--- a/DesignSystem/.gitignore
+++ b/DesignSystem/.gitignore
@@ -6,3 +6,12 @@ DerivedData/
 .swiftpm/configuration/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .netrc
+# Xcode
+## Xcode workspace
+*.xcworkspace/
+xcuserdata/
+
+## Projeto Xcode
+*.xcodeproj/
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/*.xcsettings/
